allow any server

--- a/tools/app-project.yaml
+++ b/tools/app-project.yaml
@@ -8,8 +8,8 @@ spec:
   - group: '*'
     kind: '*'
   destinations:
-  - namespace: tools
-    server: https://kubernetes.default.svc
+  - namespace: '*'
+    server: '*'
   orphanedResources:
     warn: false
   sourceRepos:
