--- a/tools/argocd/app.yaml
+++ b/tools/argocd/app.yaml
@@ -15,21 +15,21 @@ spec:
     helm:
       valueFiles:
         - values.yaml
-      parameters:
-        - name: server.ingress.enabled
-          value: 'true'
-        - name: server.ingress.https
-          value: 'true'
-        - name: server.ingress.ingressClassName
-          value: nginx
-        - name: server.ingressGrpc.enabled
-          value: 'true'
-        - name: server.ingressGrpc.https
-          value: 'true'
-        - name: server.ingressGrpc.ingressClassName
-          value: nginx
-        - name: server.route.hostname
-          value: argocd.mk.local
+      # parameters:
+      #   - name: server.ingress.enabled
+      #     value: 'true'
+      #   - name: server.ingress.https
+      #     value: 'true'
+      #   - name: server.ingress.ingressClassName
+      #     value: nginx
+      #   - name: server.ingressGrpc.enabled
+      #     value: 'true'
+      #   - name: server.ingressGrpc.https
+      #     value: 'true'
+      #   - name: server.ingressGrpc.ingressClassName
+      #     value: nginx
+      #   - name: server.route.hostname
+      #     value: argocd.mk.local
   project: tools
   syncPolicy:
     automated:
