--- a/argocd/repositories/helm_elastic.yaml
+++ b/argocd/repositories/helm_elastic.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: jaeger-helm-repo
-  namespace: elastic
+  name: elastic-helm-repo
+  namespace: argocd
   labels:
     argocd.argoproj.io/secret-type: repository
 stringData:
