--- a/argocd/repositories/helm_jaeger.yaml
+++ b/argocd/repositories/helm_jaeger.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: jaeger-helm-repo
-  namespace: jaegercd
+  namespace: argocd
   labels:
     argocd.argoproj.io/secret-type: repository
 stringData:
