argocd cm to enable helm on kustomize

--- a/env/tools/argocd/kustomization.yaml
+++ b/env/tools/argocd/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 resources:
   - ./base/argocd-install.yaml
   - ./base/ingress.yaml
+
+patchesStrategicMerge:
+  - ./overlays/argocd-cm.yaml
