fix argocd kustomize

--- a/env/tools/argocd/base/argocd-install.yaml
+++ b/env/tools/argocd/base/argocd-install.yaml
@@ -2850,6 +2850,7 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-cm
+  namespace: argocd
 ---
 apiVersion: v1
 kind: ConfigMap
