--- a/env/tools/prometheus/kustomization.yaml
+++ b/env/tools/prometheus/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
 
 helmCharts:
   - name: prometheus
-    repo: prometheus
+    repo: https://prometheus-community.github.io/helm-charts
     version: 15.1.1
     releaseName: prometheus
