--- a/env/tools/prometheus/base/alert-manager-pv.yaml
+++ b/env/tools/prometheus/base/alert-manager-pv.yaml
@@ -9,3 +9,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
+
+  claimRef:
+    name: storage-volume-prometheus-alertmanager-0
+    namespace: central
