--- a/argocd/apps/tools/grafana.yaml
+++ b/argocd/apps/tools/grafana.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus
+  name: grafana
 spec:
   destination:
     name: ''
@@ -10,12 +10,12 @@ spec:
 
   source:
     path: ''
-    repoURL: 'https://prometheus-community.github.io/helm-charts'
-    targetRevision: 15.1.1
-    chart: prometheus
+    repoURL: 'https://grafana.github.io/helm-charts'
+    targetRevision: 6.21.1
+    chart: grafana
     helm:
       valueFiles:
-        - "env/tools/prometheus/values.yaml"
+        - "env/tools/grafana/values.yaml"
 
   project: tools
   syncPolicy:
