--- a/argocd/apps/tools/prometheus.yaml
+++ b/argocd/apps/tools/prometheus.yaml
@@ -9,13 +9,9 @@ spec:
     server: 'https://kubernetes.default.svc'
 
   source:
-    path: ''
-    repoURL: 'https://prometheus-community.github.io/helm-charts'
-    targetRevision: 15.1.1
-    chart: prometheus
-    helm:
-      valueFiles:
-        - "env/tools/prometheus/values.yaml"
+    path: env/tools/prometheus
+    repoURL: 'https://github.com/logamanig/sample-argocd-apps'
+    targetRevision: master
 
   project: tools
   syncPolicy:
