--- a/env/tools/grafana/kustomization.yaml
+++ b/env/tools/grafana/kustomization.yaml
@@ -4,4 +4,5 @@ helmCharts:
   - name: grafana
     repo: https://grafana.github.io/helm-charts
     version: 6.21.1
+    releaseName: grafana
     valuesFile: values.yaml
