--- a/env/tools/prometheus/kustomization.yaml
+++ b/env/tools/prometheus/kustomization.yaml
@@ -5,4 +5,4 @@ helmCharts:
     repo: https://prometheus-community.github.io/helm-charts
     version: 15.1.1
     releaseName: prometheus
-    valuesFile: env/tools/prometheus/values.yaml
+    valuesFile: values.yaml
