--- a/env/tools/argocd/base/argocd-install.yaml
+++ b/env/tools/argocd/base/argocd-install.yaml
@@ -9719,7 +9719,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /shared/argocd-dex
-        image: quay.io/argoproj/argocd:v2.3.0-rc1
+        image: quay.io/argoproj/argocd:2.3.0-rc1
         imagePullPolicy: Always
         name: copyutil
         volumeMounts:
@@ -9752,7 +9752,7 @@ spec:
       containers:
       - command:
         - argocd-notifications
-        image: quay.io/argoproj/argocd:v2.3.0-rc1
+        image: quay.io/argoproj/argocd:2.3.0-rc1
         imagePullPolicy: Always
         livenessProbe:
           tcpSocket:
@@ -9949,7 +9949,7 @@ spec:
           value: /helm-working-dir
         - name: HELM_DATA_HOME
           value: /helm-working-dir
-        image: quay.io/argoproj/argocd:v2.3.0-rc1
+        image: quay.io/argoproj/argocd:2.3.0-rc1
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
@@ -9998,7 +9998,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /var/run/argocd/argocd-cmp-server
-        image: quay.io/argoproj/argocd:v2.3.0-rc1
+        image: quay.io/argoproj/argocd:2.3.0-rc1
         name: copyutil
         volumeMounts:
         - mountPath: /var/run/argocd
@@ -10221,7 +10221,7 @@ spec:
               key: server.http.cookie.maxnumber
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/argoproj/argocd:v2.3.0-rc1
+        image: quay.io/argoproj/argocd:2.3.0-rc1
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
@@ -10411,7 +10411,7 @@ spec:
               key: controller.default.cache.expiration
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/argoproj/argocd:v2.3.0-rc1
+        image: quay.io/argoproj/argocd:2.3.0-rc1
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
