fix appset syntax error

--- a/argocd/appsets/cluster-addons/ingress-nginx.yaml
+++ b/argocd/appsets/cluster-addons/ingress-nginx.yaml
@@ -16,9 +16,9 @@ spec:
         path: env/devops/cluster-addons/ingress-nginx
 
       destination:
-        server: {{server}} 
+        server: '{{server}}'
         namespace: ingress-nginx
-        
+
       syncPolicy:
         automated:
           prune: true
