--- a/env/devops/tools/argocd/kustomization.yaml
+++ b/env/devops/tools/argocd/kustomization.yaml
@@ -5,5 +5,9 @@ resources:
   - ./base/argocd-install.yaml
   - ./base/ingress.yaml
 
-patchesStrategicMerge:
-  - ./overlays/argocd-cm.yaml
+patches:
+  - target:
+      kind: ConfigMap
+      name: argocd-cm
+    path: ./overlays/argocd-cm.yaml
+      
