upgrade argocd to v2.3.0-rc4

--- a/env/devops/tools/argocd/base/argocd-install.yaml
+++ b/env/devops/tools/argocd/base/argocd-install.yaml
@@ -16658,6 +16658,7 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-cm
+  namespace: argocd
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -16988,7 +16989,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /shared/argocd-dex
-        image: quay.io/argoproj/argocd:v2.3.0-rc2
+        image: quay.io/argoproj/argocd:v2.3.0-rc4
         imagePullPolicy: Always
         name: copyutil
         volumeMounts:
@@ -17021,7 +17022,7 @@ spec:
       containers:
       - command:
         - argocd-notifications
-        image: quay.io/argoproj/argocd:v2.3.0-rc2
+        image: quay.io/argoproj/argocd:v2.3.0-rc4
         imagePullPolicy: Always
         livenessProbe:
           tcpSocket:
@@ -17218,7 +17219,7 @@ spec:
           value: /helm-working-dir
         - name: HELM_DATA_HOME
           value: /helm-working-dir
-        image: quay.io/argoproj/argocd:v2.3.0-rc2
+        image: quay.io/argoproj/argocd:v2.3.0-rc4
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
@@ -17267,7 +17268,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /var/run/argocd/argocd-cmp-server
-        image: quay.io/argoproj/argocd:v2.3.0-rc2
+        image: quay.io/argoproj/argocd:v2.3.0-rc4
         name: copyutil
         volumeMounts:
         - mountPath: /var/run/argocd
@@ -17490,7 +17491,7 @@ spec:
               key: server.http.cookie.maxnumber
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/argoproj/argocd:v2.3.0-rc2
+        image: quay.io/argoproj/argocd:v2.3.0-rc4
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
@@ -17680,7 +17681,7 @@ spec:
               key: controller.default.cache.expiration
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/argoproj/argocd:v2.3.0-rc2
+        image: quay.io/argoproj/argocd:v2.3.0-rc4
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
