--- a/env/devops/tools/vault/kustomization.yaml
+++ b/env/devops/tools/vault/kustomization.yaml
@@ -2,7 +2,7 @@ kind: Kustomization
 
 helmCharts:
   - name: vault
-    repo: https://grafana.github.io/helm-charts
+    repo: https://helm.releases.hashicorp.com
     version: 0.19.0
     releaseName: vault
     valuesFile: values.yaml
