--- a/env/devops/tools/vault/values.yaml
+++ b/env/devops/tools/vault/values.yaml
@@ -1,7 +1,8 @@
 global:
   enabled: true
-  tlsDisabled: false
-  psp: disabled
+  tlsDisabled: true
+  psp:
+    enabled: false
 
 injector:
   enabled: false
@@ -10,6 +11,11 @@ server:
   enabled: true
   ingress:
     enabled: true
+    annotations:
+      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    ingressClassName: nginx
     hosts:
       - mk.vault.local
     tls:
