fix ingress hosts conifg in vault values

--- a/env/devops/tools/vault/values.yaml
+++ b/env/devops/tools/vault/values.yaml
@@ -17,7 +17,7 @@ server:
       nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     ingressClassName: nginx
     hosts:
-      - mk.vault.local
+      - host: mk.vault.local
     tls:
       - hosts:
         - mk.vault.local
