--- a/argocd/apps/devops/k8s-external-secrets.yaml
+++ b/argocd/apps/devops/k8s-external-secrets.yaml
@@ -5,7 +5,7 @@
 # spec:
 #   destination:
 #     name: ''
-#     namespace: tools
+#     namespace: argocd
 #     server: 'https://kubernetes.default.svc'
 #   source:
 #     path: env/devops/tools/k8s-external-secrets
