--- a/argocd/apps/devops/prometheus.yaml
+++ b/argocd/apps/devops/prometheus.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   destination:
     name: ''
-    namespace: monitoring
+    namespace: argocd
     server: 'https://kubernetes.default.svc'
 
   source:
