--- a/env/devops/shared/keycloak/ingress.yaml
+++ b/env/devops/shared/keycloak/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: keycloak-ingress
+  namespace: shared
 spec:
   ingressClassName: nginx
   tls:
