update app namespaces

--- a/argocd/apps/devops/k8s-external-secrets.yaml
+++ b/argocd/apps/devops/k8s-external-secrets.yaml
@@ -2,10 +2,11 @@
 # kind: Application
 # metadata:
 #   name: k8s-external-secrets
+#   namespace: argocd
 # spec:
 #   destination:
 #     name: ''
-#     namespace: argocd
+#     namespace: tools
 #     server: 'https://kubernetes.default.svc'
 #   source:
 #     path: env/devops/tools/k8s-external-secrets
