--- a/argocd/apps/devops/grafana.yaml
+++ b/argocd/apps/devops/grafana.yaml
@@ -2,10 +2,11 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: grafana
+  namespace: argocd
 spec:
   destination:
     name: ''
-    namespace: argocd
+    namespace: monitoring
     server: 'https://kubernetes.default.svc'
 
   source:
