enable file storage for vault

--- a/env/devops/tools/vault/values.yaml
+++ b/env/devops/tools/vault/values.yaml
@@ -45,9 +45,10 @@ server:
         address = "[::]:8200"
         cluster_address = "[::]:8201"
       }
-      # storage "file" {
-      #   path = "/vault/data"
-      # }
+      
+      storage "file" {
+        path = "/vault/data"
+      }
 
       seal "awskms" {
           region = "ap-southeast-1"
