add pathType to vault ingress

--- a/env/devops/tools/vault/values.yaml
+++ b/env/devops/tools/vault/values.yaml
@@ -64,6 +64,7 @@ server:
     ingressClassName: nginx
     extraPaths:
     - path: /*
+      pathType: ImplementationSpecific
       backend:
         service:
           name: ssl-redirect
