ssl-redirect set port 8201 vault

--- a/env/devops/tools/vault/values.yaml
+++ b/env/devops/tools/vault/values.yaml
@@ -69,7 +69,7 @@ server:
         service:
           name: ssl-redirect
           port:
-            number: use-annotation
+            number: 8201
     hosts:
       - host: mk.vault.local
     tls:
