--- a/env/devops/tools/vault/values.yaml
+++ b/env/devops/tools/vault/values.yaml
@@ -69,7 +69,7 @@ server:
         service:
           name: ssl-redirect
           port:
-            number: 8201
+            name: use-annotation
     hosts:
       - host: mk.vault.local
     tls:
