disable vault ingress ssl-passthrough

--- a/env/devops/tools/vault/values.yaml
+++ b/env/devops/tools/vault/values.yaml
@@ -57,10 +57,10 @@ server:
 
   ingress:
     enabled: true
-    annotations:
-      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    # annotations:
+    #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     ingressClassName: nginx
     extraPaths:
     - path: /*
