allow http traffic for sso ingress to avoid cert validation in local env

--- a/env/devops/shared/keycloak/ingress.yaml
+++ b/env/devops/shared/keycloak/ingress.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: keycloak-ingress
   namespace: shared
+  annotations:
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
 spec:
   ingressClassName: nginx
   tls:
