--- a/env/devops/shared/keycloak/deployment.yaml
+++ b/env/devops/shared/keycloak/deployment.yaml
@@ -18,19 +18,18 @@ spec:
       containers:
       - name: keycloak
         image: quay.io/keycloak/keycloak:17.0.0
+        args: ["start"]
         env:
-        - name: KEYCLOAK_USER
+        - name: KEYCLOAK_ADMIN
           value: "admin"
-        - name: KEYCLOAK_PASSWORD
+        - name: KEYCLOAK_ADMIN_PASSWORD
           value: "admin"
-        - name: PROXY_ADDRESS_FORWARDING
-          value: "true"
+        - name: KC_PROXY
+          value: "edge"
         ports:
         - name: http
           containerPort: 8080
-        - name: https
-          containerPort: 8443
         readinessProbe:
           httpGet:
-            path: /auth/realms/master
+            path: /realms/master
             port: 8080
