--- a/env/devops/shared/keycloak/ingress.yaml
+++ b/env/devops/shared/keycloak/ingress.yaml
@@ -10,8 +10,19 @@ spec:
   tls:
   - hosts:
     - mk.sso.local
+    - sso.192.168.64.15.nip.io
   rules:
   - host: mk.sso.local
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: keycloak
+            port: 
+              name: http
+  - host: sso.192.168.64.15.nip.io
     http:
       paths:
       - pathType: Prefix
