--- a/argocd/repositories/helm_external_secrets-operator.yaml
+++ b/argocd/repositories/helm_external_secrets-operator.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: external-secrets-helm-repo
+  name: external-secrets-operator-helm-repo
   namespace: argocd
   labels:
     argocd.argoproj.io/secret-type: repository
 stringData:
-  url: https://external-secrets.github.io/kubernetes-external-secrets/
-  name: external-secrets
+  url: https://charts.external-secrets.io
+  name: external-secrets-operator
   type: helm
