--- a/argocd/repositories/helm_linkerd.yaml
+++ b/argocd/repositories/helm_linkerd.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: istio-helm-repo
+  name: linkerd-helm-repo
   namespace: argocd
   labels:
     argocd.argoproj.io/secret-type: repository
 stringData:
-  url: https://istio-release.storage.googleapis.com/charts
-  name: istio
+  url: https://helm.linkerd.io/stable
+  name: linkerd
   type: helm
