fix cert-manager chart release name

--- a/env/cluster-addons/cert-manager/kustomization.yaml
+++ b/env/cluster-addons/cert-manager/kustomization.yaml
@@ -5,6 +5,6 @@ helmCharts:
   - name: cert-manager
     repo: https://charts.jetstack.io
     version: 1.7.1
-    releaseName: external-secrets
+    releaseName: cert-manager
     valuesFile: values.yaml
     includeCRDs: true
