fix namespace issues with cluster addon

--- a/env/cluster-addons/external-secrets-operator/cluster-secret-store.yaml
+++ b/env/cluster-addons/external-secrets-operator/cluster-secret-store.yaml
@@ -2,6 +2,7 @@ apiVersion: external-secrets.io/v1alpha1
 kind: ClusterSecretStore
 metadata:
   name: aws-secret-manager
+  namespace: external-secrets-operator
 spec:
   provider:
     aws:
