--- a/env/cluster-addons/cert-manager/linkerd-cert-issuer.yaml
+++ b/env/cluster-addons/cert-manager/linkerd-cert-issuer.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: linkerd-self-signed-issuer
+  namespace: cert-manager
 spec:
   selfSigned: {}
 ---
@@ -9,6 +10,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: linkerd-trust-anchor
+  namespace: cert-manager
 spec:
   isCA: true
   commonName: root.linkerd.cluster.local
@@ -25,6 +27,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: linkerd-trust-anchor
+  namespace: cert-manager
 spec:
   ca:
     secretName: linkerd-identity-trust-roots
