move additonal resource to base of kustomization

--- a/env/cluster-addons/cert-manager/kustomization.yaml
+++ b/env/cluster-addons/cert-manager/kustomization.yaml
@@ -1,6 +1,9 @@
 kind: Kustomization
 namespace: cert-manager
 
+resources:
+  - "./base/linkerd-cert-issuer.yaml"
+
 helmCharts:
   - name: cert-manager
     repo: https://charts.jetstack.io
