--- a/env/cluster-addons/external-secrets-operator/kustomization.yaml
+++ b/env/cluster-addons/external-secrets-operator/kustomization.yaml
@@ -1,6 +1,9 @@
 kind: Kustomization
 namespace: external-secrets-operator
 
+resources:
+  - "./base/cluster-secret-store.yaml"
+  
 helmCharts:
   - name: external-secrets
     repo: https://charts.external-secrets.io
