fix clustersecret store

--- a/env/cluster-addons/external-secrets-operator/base/cluster-secret-store.yaml
+++ b/env/cluster-addons/external-secrets-operator/base/cluster-secret-store.yaml
@@ -2,7 +2,6 @@ apiVersion: external-secrets.io/v1alpha1
 kind: ClusterSecretStore
 metadata:
   name: aws-secret-manager
-  namespace: external-secrets-operator
 spec:
   provider:
     aws:
@@ -14,7 +13,7 @@ spec:
         secretRef:
           accessKeyID:
             name: awssm-secret
-            key: access-key
+            key: AWS_ACCESS_KEY_ID
           secretAccessKey:
             name: awssm-secret
-            key: secret-access-key
+            key: AWS_SECRET_ACCESS_KEY
