fix clusterssecretstore secretref

--- a/env/cluster-addons/external-secrets-operator/base/cluster-secret-store.yaml
+++ b/env/cluster-addons/external-secrets-operator/base/cluster-secret-store.yaml
@@ -11,9 +11,9 @@ spec:
       auth:
         # Getting the accessKeyID and secretAccessKey from an already created Kubernetes Secret
         secretRef:
-          accessKeyID:
+          accessKeyIDSecretRef:
             name: awssm-secret
             key: AWS_ACCESS_KEY_ID
-          secretAccessKey:
+          secretAccessKeySecretRef:
             name: awssm-secret
             key: AWS_SECRET_ACCESS_KEY
