--- a/env/cluster-addons/external-secrets-operator/base/cluster-secret-store.yaml
+++ b/env/cluster-addons/external-secrets-operator/base/cluster-secret-store.yaml
@@ -14,6 +14,8 @@ spec:
           accessKeyIDSecretRef:
             name: awssm-secret
             key: AWS_ACCESS_KEY_ID
+            namespace: external-secrets-operator
           secretAccessKeySecretRef:
             name: awssm-secret
             key: AWS_SECRET_ACCESS_KEY
+            namespace: external-secrets-operator
