remove iam role from cluster secret store

--- a/env/cluster-addons/external-secrets-operator/base/cluster-secret-store.yaml
+++ b/env/cluster-addons/external-secrets-operator/base/cluster-secret-store.yaml
@@ -6,7 +6,7 @@ spec:
   provider:
     aws:
       service: SecretsManager
-      role: iam-role
+      # role: iam-role
       region: ap-southeast-1
       auth:
         # Getting the accessKeyID and secretAccessKey from an already created Kubernetes Secret
