--- a/argocd/apps/devops/vault.yaml
+++ b/argocd/apps/devops/vault.yaml
@@ -1,21 +1,21 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: vault
-  namespace: argocd
-spec:
-  destination:
-    name: ''
-    namespace: tools
-    server: 'https://kubernetes.default.svc'
-  source:
-    path: env/devops/tools/vault
-    repoURL: 'https://github.com/logamanig/sample-argocd-apps'
-    targetRevision: master
-  project: tools
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: vault
+#   namespace: argocd
+# spec:
+#   destination:
+#     name: ''
+#     namespace: tools
+#     server: 'https://kubernetes.default.svc'
+#   source:
+#     path: env/devops/tools/vault
+#     repoURL: 'https://github.com/logamanig/sample-argocd-apps'
+#     targetRevision: master
+#   project: tools
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#       - CreateNamespace=true
