fix kustomize resource syntax

--- a/env/cluster-addons/cert-manager/kustomization.yaml
+++ b/env/cluster-addons/cert-manager/kustomization.yaml
@@ -1,7 +1,7 @@
 kind: Kustomization
 
 resources:
-  - "./resources"
+  - "./resources/linkerd-cert-issuer.yaml"
 
 helmCharts:
   - name: cert-manager
