--- a/env/cluster-addons/external-secrets-operator/kustomization.yaml
+++ b/env/cluster-addons/external-secrets-operator/kustomization.yaml
@@ -1,7 +1,7 @@
 kind: Kustomization
 
 resources:
-  - "./resources"
+  - "./resources/cluster-secret-store.yaml"
 
 helmCharts:
   - name: external-secrets
