--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -1,8 +1,8 @@
 kind: Kustomization
 
 resources:
-  - "./resources"
-  
+  - "./resources/"
+
 helmCharts:
   - name: linkerd2
     repo: https://helm.linkerd.io/stable
