--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -1,7 +1,7 @@
 kind: Kustomization
 
 resources:
-  - "./resources/"
+  - "./resources/use-certmanager-cert-as-linkerd-issuer-cert.yaml"
 
 helmCharts:
   - name: linkerd2
