move linkerd cert issuer to linkerd kustomize

--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -1,6 +1,7 @@
 kind: Kustomization
 
 resources:
+  - "./resources/linkerd-cert-issuer.yaml"
   - "./resources/use-certmanager-cert-as-linkerd-issuer-cert.yaml"
 
 helmCharts:
