--- a/env/cluster-addons/cert-manager/kustomization.yaml
+++ b/env/cluster-addons/cert-manager/kustomization.yaml
@@ -1,5 +1,8 @@
 kind: Kustomization
 
+resources:
+  - "./resources/linkerd-cert-issuer.yaml"
+
 helmCharts:
   - name: cert-manager
     repo: https://charts.jetstack.io
