install cert-manager-trust chart

--- a/env/cluster-addons/cert-manager/kustomization.yaml
+++ b/env/cluster-addons/cert-manager/kustomization.yaml
@@ -10,3 +10,9 @@ helmCharts:
     releaseName: cert-manager
     valuesFile: values.yaml
     includeCRDs: true
+
+  - name: cert-manager-trust
+    repo: https://charts.jetstack.io
+    version: 0.1.1
+    releaseName: cert-manager-trust
+    includeCRDs: true
