--- a/env/cluster-addons/prometheus/values.yaml
+++ b/env/cluster-addons/prometheus/values.yaml
@@ -86,13 +86,13 @@ server:
     hosts:
       - mk.prometheus.local
     extraPaths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: ssl-redirect
-            port:
-              name: use-annotation
+      # - path: /
+      #   pathType: Prefix
+      #   backend:
+      #     service:
+      #       name: ssl-redirect
+      #       port:
+      #         name: use-annotation
       - path: /*
         pathType: ImplementationSpecific
         backend:
