--- a/env/devops/tools/grafana/values.yaml
+++ b/env/devops/tools/grafana/values.yaml
@@ -30,15 +30,15 @@ ldap:
 env:
   GF_SERVER_DOMAIN: "mk.grafana.local"
   GF_SERVER_ROOT_URL: "https://mk.grafana.local"
-  GF_AUTH_GENERIC_OAUTH_ENABLED: "true"
-  GF_AUTH_GENERIC_OAUTH_NAME: "Login with Keycloak"
-  GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: "true"
-  GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "grafana"
-  GF_AUTH_GENERIC_OAUTH_SCOPES: "profile"
-  GF_AUTH_GENERIC_OAUTH_AUTH_URL: "http://sso.192.168.64.17.nip.io/auth/realms/k8s/protocol/openid-connect/auth"
-  GF_AUTH_GENERIC_OAUTH_TOKEN_URL: "http://sso.192.168.64.17.nip.io/auth/realms/k8s/protocol/openid-connect/token"
-  GF_AUTH_GENERIC_OAUTH_API_URL: "http://sso.192.168.64.17.nip.io/auth/realms/k8s/protocol/openid-connect/userinfo"
-  GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "contains(roles[*], 'admin') && 'Admin' || contains(roles[*], 'editor') && 'Editor' || 'Viewer'"
-  GF_AUTH_GENERIC_OAUTH_TLS_SKIP_VERIFY_INSECURE: "true"
+#   GF_AUTH_GENERIC_OAUTH_ENABLED: "true"
+#   GF_AUTH_GENERIC_OAUTH_NAME: "Login with Keycloak"
+#   GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: "true"
+#   GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "grafana"
+#   GF_AUTH_GENERIC_OAUTH_SCOPES: "profile"
+#   GF_AUTH_GENERIC_OAUTH_AUTH_URL: "http://sso.192.168.64.17.nip.io/auth/realms/k8s/protocol/openid-connect/auth"
+#   GF_AUTH_GENERIC_OAUTH_TOKEN_URL: "http://sso.192.168.64.17.nip.io/auth/realms/k8s/protocol/openid-connect/token"
+#   GF_AUTH_GENERIC_OAUTH_API_URL: "http://sso.192.168.64.17.nip.io/auth/realms/k8s/protocol/openid-connect/userinfo"
+#   GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "contains(roles[*], 'admin') && 'Admin' || contains(roles[*], 'editor') && 'Editor' || 'Viewer'"
+#   GF_AUTH_GENERIC_OAUTH_TLS_SKIP_VERIFY_INSECURE: "true"
 
-envFromSecret: "oidc-grafana-secret"
+# envFromSecret: "oidc-grafana-secret"
