--- a/env/devops/tools/grafana/kustomization.yaml
+++ b/env/devops/tools/grafana/kustomization.yaml
@@ -1,4 +1,5 @@
 kind: Kustomization
+namespace: grafana
 
 helmCharts:
   - name: grafana
@@ -6,4 +7,3 @@ helmCharts:
     version: 6.23.0
     releaseName: grafana
     valuesFile: values.yaml
-    namespace: monitoring
