--- a/env/cluster-addons/prometheus/kustomization.yaml
+++ b/env/cluster-addons/prometheus/kustomization.yaml
@@ -2,8 +2,8 @@ kind: Kustomization
 namespace: prometheus
 
 helmCharts:
-  - name: kube-prometheus-stack
+  - name: prometheus
     repo: https://prometheus-community.github.io/helm-charts
-    version: 33.1.0
+    version: 15.1.1
     releaseName: prometheus
     valuesFile: values.yaml
