--- a/env/cluster-addons/linkerd/resources/use-certmanager-cert-as-linkerd-issuer-cert.yaml
+++ b/env/cluster-addons/linkerd/resources/use-certmanager-cert-as-linkerd-issuer-cert.yaml
@@ -4,8 +4,8 @@ metadata:
   name: linkerd-identity-issuer
 spec:
   secretName: linkerd-identity-issuer
-  duration: 48h
-  renewBefore: 25h
+  duration: 48h0m0s
+  renewBefore: 25h0m0s
   issuerRef:
     name: linkerd-trust-anchor
     kind: ClusterIssuer
