disable prometheus adminission webhook

--- a/env/cluster-addons/prometheus/values.yaml
+++ b/env/cluster-addons/prometheus/values.yaml
@@ -19,3 +19,18 @@ prometheus:
     tls:
       - hosts:
           - mk.prometheus.local
+
+prometheus-operator:
+  admissionWebhooks: 
+    enabled: false
+  # Use certmanager to generate webhook certs
+    certManager:
+      enabled: false
+      # self-signed root certificate
+      rootCert:
+        duration: ""  # default to be 5y
+      admissionCert:
+        duration: ""  # default to be 1y
+      # issuerRef:
+      #   name: "issuer"
+      #   kind: "ClusterIssuer"
