--- a/env/cluster-addons/prometheus/values.yaml
+++ b/env/cluster-addons/prometheus/values.yaml
@@ -11,8 +11,9 @@ prometheus:
     port: 9090
 
     additionalPorts:
-      - http: 80
-      - https: 443
+      - name: http
+        port: 80
+        targetPort: 9090
   
   ingress:
     enabled: true
