--- a/env/cluster-addons/argo-rollouts/values.yaml
+++ b/env/cluster-addons/argo-rollouts/values.yaml
@@ -3,6 +3,9 @@ installCRDs: true
 # -- Keep CRD's on helm uninstall
 keepCRDs: false
 
+controller:
+  image:
+    tag: 1.2.0-rc2 # comment out if pre-release or other than the chart defined versions not required. Version override to use rc version which is not possible with argo helm chart as it only supports stable version
 dashboard:
   # -- Deploy dashboard server
   enabled: true
